# OS

./: README.md  a.out  child  child.cpp  sample  test1.cpp  Схема
TermProject/: CMakeLists.txt
TermProject/include/: jobs.hpp  jobs_validator.hpp
TermProject/src/: config.yaml  jobs.cpp  jobs_validator.cpp  main.cpp
lab1/: README.md  a.out  child1.cpp  example.cpp  main.cpp
lab1/samples/: pipe_example.cpp
lab1/src/: CMakeLists.txt  child  child1.cpp  child2.cpp  funcs.cpp  funcs.h  main.cpp
lab2/: CMakeLists.txt
lab2/src/: main.cpp  sample.cpp
lab3/: .gitignore  CMakeLists.txt  README.md
lab3/src/: child1.cpp  child2.cpp  main.c  main.cpp
lab4/: CMakeLists.txt  README.md
lab4/GCDLib/: GCD.cpp  GCD.hpp
lab4/PrimeCountLib/: primeCount.cpp  primeCount.hpp
lab4/src/: main.cpp
lab5-7/: CMakeLists.txt
lab5-7/include/: calc_node.hpp  server.hpp  server_topology.hpp  tree.hpp  zmq_funcs.hpp
lab5-7/src/: calc_node.cpp  client  client.cpp  main.cpp  server  server.cpp  tree.cpp
lab8/: README8.md
